Fixed Carousel Height from 25vw to 50vw for less stretched img

--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,7 @@
             margin-top: 0px;
         }
 .carousel img {
-  height:25vw;
+  height:50vw;
 }
         #menu a:hover i.material-symbols-outlined {
             vertical-align: middle;
